fixed error display on mobile and tablet

--- a/src/Search.css
+++ b/src/Search.css
@@ -29,10 +29,11 @@
 }
 
 .noResult {
+  position: absolute;
   color: red;
   font-family: "Space Mono", monospace;
   font-size: 15px;
-  margin-left: 10rem;
+  margin-left: 27rem;
 }
 
 .Search-Form {
@@ -76,7 +77,7 @@
   }
 
   .noResult {
-    margin-left: 5rem;
+    margin-left: 17rem;
   }
 }
 
@@ -93,7 +94,9 @@
   }
 
   .noResult {
-    visibility: collapse;
+    font-size: 13px;
+    margin-top: 2rem;
+    margin-left: -11rem;
   }
   #submit {
     height: 46px;
@@ -107,7 +110,7 @@
     border: none;
     font-family: "Space Mono", monospace;
     outline: none;
-    margin-right: -5rem;
+    margin-right: 0;
     margin-left: 0.5rem;
   }
 
